grammar_probable.txt
ALNUM_LIT =
 1   |
 2   |
 ... |
 9   |
 'a' |
 'b' |
 ... |
 'z' |
 'A' |
 'B' |
..   |
 'Z' 

| special characters utf-8

 function -> KEYWORD IDENTIFIER "(" PARAMETER ")" "->" TYPE 
			"{"
			STATEMENT
			"}"

STATEMENTS -> STATEMENT ";" 

STATEMENT -> FUNCTION_CALL | ASSIGNMENT | IF_STATEMENT | EXPRESSION | WHILE_STATEMENT | FOR_LOOP 

BLOCK -> "{" STATEMENTS "}"

CONDITIONS -> CONDITION | e ???

IF_STATEMENT -> "IF" "(" CONDITION ")" BLOCK 

FOR_LOOP -> "FOR" "(" CONDITIONS ")" BLOCK

WHILE_STATEMENT -> "WHILE" "(" CONDITION ")" BLOCK

ARGUMENT -> ARGUMENT "," ARGUMENT | ARGUMENT | ALNUM_LIT
		
FUNCTION_CALL -> IDENTIFIER "(" ARGUMENT ")" ";"

EXPRESSION -> IDENTIFIER OPERATOR IDENTIFIER | IDENTIFIER OPERATOR ALNUM_LIT 
